--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </span> -->
 
               <span class="link-block">
-                <a href="https://droneslab.github.io/CULVERT-INSPECTION/"
+                <a href="https://droneslab.github.io/INSPECTOR/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fa fa-database"></i>
