--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
             Subterranean environments such as culverts present significant challenges to robot vision due to dim lighting and lack of distinctive features. Although onboard illumination can help, it introduces issues such as specular reflections, overexposure, and increased power consumption. We propose NightHawk, a framework that combines active illumination with exposure control to optimize image quality in these settings. NightHawk formulates an online Bayesian optimization problem to determine the best light intensity and exposure time for a given scene. A novel feature detector-based metric quantifies image utility and serves as the cost function for the optimizer. We built NightHawk as an event-triggered recursive optimization pipeline and deployed it on a legged robot navigating a culvert in the Erie Canal. Preliminary results demonstrate improvements in feature tracking and estimation accuracy.  Further experiments including integration with a visual odometry system are currently underway.
           </p>
         </div>
+        <div class="publication-video">
+          <iframe width="1280" height="720" src="https://www.youtube.com/embed/3_p80zn2ofQ?si=JYRMwODBr8a1gEyy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Coming Soon!</p>
+        </div>
       </div>
     </div>
   </div>
@@ -184,7 +188,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video Presentation</h2>
         <div class="publication-video">
-          <iframe width="1280" height="720" src="https://www.youtube.com/embed/6dDXMJNIMHY?si=hvPRGy5bBFIfJoeV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="1280" height="720" src="https://www.youtube.com/embed/3_p80zn2ofQ?si=JYRMwODBr8a1gEyy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Coming Soon!</p>
         </div>
       </div>
