--- a/index.html
+++ b/index.html
@@ -92,9 +92,19 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper (Coming Soon)</span>
+                        <span>Full Paper (Coming Soon)</span>
                       </a>
                     </span>
+
+                    <span class="link-block">
+                      <a href="./docs/NightHawk___ISER_2025-3-compressed.pdf" target="_blank"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-file-pdf"></i>
+                      </span>
+                      <span>Extended Abstract</span>
+                    </a>
+                  </span>
 
                     <!-- Supplementary PDF link -->
                     <!-- <span class="link-block">
