--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/droneslab/NIGHTHAWK/"
+                    <a href="https://github.com/droneslab/NH/"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code (Coming Soon)</span>
+                    <span>Code</span>
                   </a>
                 </span>
 
