arxiv and bib update

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="" target="_blank"
+                        <a href="https://arxiv.org/abs/2506.06394" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Full Paper (Coming Soon)</span>
+                        <span>Arxiv</span>
                       </a>
                     </span>
 
-                    <span class="link-block">
+                    <!-- <span class="link-block">
                       <a href="./docs/NightHawk___ISER_2025-3-compressed.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -104,7 +104,7 @@
                       </span>
                       <span>Extended Abstract</span>
                     </a>
-                  </span>
+                  </span> -->
 
                     <!-- Supplementary PDF link -->
                     <!-- <span class="link-block">
@@ -528,7 +528,8 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{turkar2025nighthawk,
         title={Active Illumination Control in Low-Light Environments},
-        author={Yash Turkar,Youngjin Kim and Karthik Dantu},
+        author={Yash Turkar, Youngjin Kim and Karthik Dantu},
+        booktitle={International Symposium on Experimental Robotics (ISER 2025)},
         year={2025}
       }
         <!-- booktitle={ECCV}, -->
