--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title"><span style="color: rgb(192, 0, 0)">NightHawk</span>: Active Illumination Control</h1>
+            <h2 style="font-size:1.5rem; color: gray;">
+                Accepted for presentation at <a href="https://iser2025.org" target="_blank">ISER 2025</a>
+            </h2> 
             <!-- <h1 style="font-size:1.5rem">European Conference on Computer Vision (ECCV) 2024</h1> -->
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
